# crescendo-sdk

./: EMAIL_SKILL.md  README.md  generate-sdks.sh  package.json  smoke-test-sdks.sh
crescendo-rust/: .openapi-generator-ignore  Cargo.toml  README.md
crescendo-rust/.openapi-generator/: FILES
crescendo-rust/docs/: AddDomainRequest.md  AddSuppressionRequest.md  AppCatalogApi.md  AppDetailResponse.md  AppSummaryResponse.md  AudiencesContactsApi.md  ConnectionResponse.md  ConnectionsApi.md  ContactResponse.md  CreateConnectionRequest.md  CreateContactRequest.md  CreateCustomEventRequest.md  CreateTemplateRequest.md  CreateWebhookRequest.md  CreateWorkflowRequest.md  CustomEvent.md  CustomEventsApi.md  DailyCount.md  DnsRecord.md  DomainResponse.md  DomainsApi.md  EmailLogResponse.md  EmailsApi.md  FireCustomEventRequest.md  ImportSuppressionsRequest.md  MetricsApi.md  MetricsResponse.md  MetricsSummary.md  PageWorkflowRunSummaryResponse.md  PageableObject.md  PublicPageContactResponse.md  PublicPageDomainResponse.md  PublicPageSuppressionResponse.md  PublicTemplateResponse.md  PublicTestSendResponse.md  PublicWebhookListResponse.md  PublicWebhookResponse.md  SendBatchRequest.md  SendBatchResponse.md  SendEmailRequest.md  (+23 more)
crescendo-rust/src/apis/: app_catalog_api.rs  audiences_contacts_api.rs  configuration.rs  connections_api.rs  custom_events_api.rs  domains_api.rs  emails_api.rs  metrics_api.rs  mod.rs  suppressions_api.rs  templates_api.rs  webhooks_api.rs  workflow_runs_api.rs  (+1 more)
crescendo-sdk-python/: pyproject.toml
crescendo-sdk-python/crescendo/: __init__.py
(+1034 files in other folders)
