[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crescendo"
version = "1.0.0"
description = "Official Python SDK for the Crescendo Email Service API"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["crescendo", "email", "transactional", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://crescendo.run"
Documentation = "https://docs.crescendo.run"
Repository = "https://github.com/crescendo/crescendo-sdk-python"
